<resources>
    <string name="app_name">Weight Tracker</string>

    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="set">Set</string>
    <string name="edit">Edit</string>

    <string name="sex">Sex</string>
    <string name="birth_date">Birth date</string>
    <string name="tall">Tall</string>
    <string name="weight">Weight</string>

    <string name="circular_progress_bar_description">The weight to the target</string>

    <string name="congratulations">Congratulations!</string>
    <string name="congratulations_description">You can set a new goal</string>

    <string name="set_desired_weight">Set a desired weight</string>
    <string name="desired_weight">Desired weight</string>
    <string name="desired_weight_cut">Desired</string>

    <string name="start_weight">Started weight</string>
    <string name="set_start_weight">Set a started weight</string>
    <string name="start_weight_cut">Started</string>

    <string name="current_weight">Current weight</string>
    <string name="set_current_weight">Set a current weight</string>
    <string name="current_weight_cut">Current</string>

    <string name="edit_current_weight">Edit a current weight</string>
    <string name="edit_current_weight_description">Edit a current weight record if you did a mistake</string>
    <string name="edit_current_weight_error">You don\'t have a current weight to edit</string>

    <string name="edit_weight">Edit the weight</string>
    <string name="edit_weight_description">Edit the weight record if you did a mistake</string>

    <string name="remove_record">Do you want to remove the record?</string>
    <string name="empty_list_view">You don\'t have any records</string>
    <string name="registration_sex_choose_title">Выбирите пол</string>
    <string name="weight_unit">Weight unit</string>
    <string name="choose_desire_weight_unit">Choose a desire weight unit</string>

    <string name="unit_system">Unit system</string>

    <string name="settings_unit_system_description">Click to change unit system</string>

    <string name="metric_system">Metric system</string>
    <string name="english_system">English system</string>

    <string name="metric_height_unit">centimeter (cm)</string>
    <string name="metric_weight_unit">kilogram (kg)</string>
    <string name="english_height_unit">foot/inch (ft/in)</string>
    <string name="english_weight_unit">pound (lb)</string>

    <string-array name="list_item_dialog_types">
        <item>Edit</item>
        <item>Remove</item>
    </string-array>

    <string-array name="weight_units_short_name">
        <item>kg</item>
        <item>lb</item>
    </string-array>

    <string-array name="weight_units">
        <item>Kilogram</item>
        <item>Pound</item>
    </string-array>

    <string-array name="tall_units">
        <item>Centimeter</item>
        <item>Foot/Inch</item>
    </string-array>

    <string-array name="tall_units_short_name">
        <item>cm</item>
        <item>ft/in</item>
    </string-array>

    <string name="sex_error">Please, choose your sex</string>
    <string name="birth_date_error">Please, choose your birth date</string>
    <string name="unit_system_error">Please, choose your unit system</string>
    <string name="tall_error">Please, choose your tall</string>
    <string name="start_weight_error">Please, choose your current weight</string>
    <string name="desire_weight_error">Please, choose your desire weight</string>
</resources>
