<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/registration_unit_english_system_view"

        android:background="@drawable/card_background"
        android:orientation="vertical"

        android:padding="16dp"

        android:layout_gravity="center_horizontal"

        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView

            android:text="@string/english_system"
            android:textColor="@color/grey"
            android:textSize="20sp"

            android:gravity="center"

            android:layout_marginBottom="8dp"

            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/british_sytem_icon"
            android:drawableStart="@drawable/british_sytem_icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tall"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/english_height_unit"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/weight"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/english_weight_unit"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>

    <LinearLayout
        android:id="@+id/registration_unit_metric_system_view"

        android:background="@drawable/card_background"
        android:orientation="vertical"

        android:padding="16dp"

        android:layout_gravity="center_horizontal"

        android:layout_width="300dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/metric_system"
            android:textColor="@color/grey"
            android:textSize="20sp"

            android:gravity="center"
            android:layout_marginBottom="8dp"

            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/metric_system_icon"
            android:drawableStart="@drawable/metric_system_icon"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/tall"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/metric_height_unit"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/weight"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_marginEnd="4dp"
                android:layout_marginRight="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:text="@string/metric_weight_unit"
                android:textSize="14sp"
                android:textColor="@color/grey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_weight="2"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


</LinearLayout>
