<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_grey"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:padding="16dp"

                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/card_background_selector"

                    android:orientation="vertical"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/circular_progress_bar_view"
                        android:orientation="vertical"
                        android:layout_gravity="center"

                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <com.greenkey.weighttracker.app.view.CircularProgressBar
                            android:id="@+id/circular_progress_bar"

                            android:layout_marginTop="24dp"
                            android:layout_marginBottom="8dp"

                            android:layout_gravity="center"
                            android:layout_width="150dp"
                            android:layout_height="150dp" />

                        <TextView
                            android:text="@string/circular_progress_bar_description"
                            android:textSize="20sp"
                            android:textColor="@color/grey"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_current_weight_view"

                    android:paddingTop="16dp"

                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/card_background_selector"

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/current_weight_icon"

                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/current_weight"
                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/textView" />

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/main_current_weight_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/main_current_weight_unit_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_started_weight_view"

                    android:padding="16dp"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/card_background_selector"

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/started"

                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/start_weight"
                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/view2" />

                    <TextView
                        android:id="@+id/main_started_weight_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/main_started_weight_unit_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/main_desire_weight_view"

                    android:padding="16dp"

                    android:layout_marginLeft="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"

                    android:background="@drawable/card_background_selector"

                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:src="@drawable/cup"

                        android:layout_marginRight="16dp"
                        android:layout_marginEnd="16dp"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:text="@string/desired_weight"
                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <View
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"/>

                    <TextView
                        android:id="@+id/main_desire_weight_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_marginRight="4dp"
                        android:layout_marginEnd="4dp"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/main_desire_weight_unit_text_view"

                        android:textSize="20sp"
                        android:textColor="@color/grey"

                        android:layout_gravity="center_vertical"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/main_floating_action_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"

        app:layout_anchor="@id/circular_progress_bar_view"
        app:layout_anchorGravity="bottom|right|end"

        android:clickable="true"
        android:src="@drawable/add_icon" />

</android.support.design.widget.CoordinatorLayout>

